--- a/src/pytorch/2_Neural_Network.ipynb
+++ b/src/pytorch/2_Neural_Network.ipynb
@@ -977,9 +977,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-project",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml-project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -991,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
